minor fix to navbar and spacing on dashboard

--- a/src/styles/sassets/schedule.scss
+++ b/src/styles/sassets/schedule.scss
@@ -79,8 +79,8 @@ span {
     padding: 10px;
     margin-right: 20px;
 
-    flex: 0 0 33.333333%;
-    max-width: 33.333333%;
+    flex: 0 0 35%;
+    max-width: 35%;
     
     @include smartphone-portrait {
         flex: 0 0 100%;
@@ -100,4 +100,12 @@ span {
 .calendar-container {
     @include shadow-card;
     padding: 30px;
+    
+    flex: 0 0 65%;
+    max-width: 65%;
+    
+    @include smartphone-portrait {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
 }
